--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@ a:active {
 <a href="https://gavine312.github.io/c/">cookie clicker 2.021 beta</a>
 <br>
 <a href="https://gavine312.github.io/ccn/">cookie clicker 2.031</a>
+<br>
+<a herf="https://gavine312.github.io/iq/">impossible quiz</a>
 </body>
 </html>
